<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Debt Note</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_paid">Mark as Paid</string>
    <string name="action_add_payment">Add</string>
    <string name="action_minus_payment">Deduct</string>
    <string name="action_sort">Sort</string>
    <string name="action_rate_us">Rate Debt Note</string>
    <string name="action_help">Help</string>
    <string name="action_save">Save</string>
    <string name="action_overflow">More</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="contact_developer_uri">mailto:aljohndeguzman@gmail.com</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>I Owe</item>
        <item>Owes Me</item>
        <item>Archive</item>
        <item>People</item>
        <!--<item>Tools</item>-->
    </string-array>
    <string-array name="people_options">
        <item>Call</item>
        <item>Email</item>
        <item>Delete</item>
    </string-array>
    <string-array name="debts_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="history_options">
        <item>Delete</item>
    </string-array>
    <string-array name="sort_options">
        <item>Name</item>
        <item>Date Created</item>
        <item>Debt Amount</item>
        <item>Due Date</item>
    </string-array>
    <string-array name="nav_list_debt">
        <item>I OWE</item>
        <item>OWES ME</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/list_menu_dashboard</item>
        <item>@drawable/list_menu_debt_out</item>
        <item>@drawable/list_menu_debt_in</item>
        <item>@drawable/list_menu_recent</item>
        <item>@drawable/list_menu_people</item>
       <!-- <item>@drawable/list_menu_tools</item>-->
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_menu_preference">Settings</string>

    <!-- Currency -->
    <string-array name="array_currency">
        <item>AED</item>
        <item>AFN</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>BAM</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BOB</item>
        <item>BSD</item>
        <item>BWP</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>\u20AC</item>
        <item>\u00A3</item>
        <item>GTQ</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>\u20AA</item>
        <item>\u20B9</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>\u00A5</item>
        <item>\u20A9</item>
        <item>KWD</item>
        <item>LBP</item>
        <item>LTL</item>
        <item>LVL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MOP</item>
        <item>MXN</item>
        <item>NAD</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>\u20B1</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>\uFDFC</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SYP</item>
        <item>\u0E3F</item>
        <item>TND</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>\u20B4</item>
        <item>$</item>
        <item>UYU</item>
        <item>VEF</item>
        <item>\u20AB</item>
        <item>YER</item>
        <item>ZAR</item>
    </string-array>

    <string name="title_activity_add_debt">Add Debt</string>
    <string name="title_activity_menu_history">MenuHistory</string>
    <string name="title_activity_single_debt">SingleDebt</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_single_payment">SinglePayment</string>
    <string name="passcode_manage">Manage passcode</string>
    <string name="passcode_enter_passcode">Enter your passcode</string>
    <string name="passcode_enter_old_passcode">Enter your old passcode</string>
    <string name="passcode_re_enter_passcode">Re-enter your passcode</string>
    <string name="passcode_change_passcode">Change passcode</string>
    <string name="passcode_set">Passcode set</string>
    <string name="passcode_wrong_passcode">Wrong passcode, please try again.</string>
    <string name="passcode_preference_title">Passcode lock</string>
    <string name="passcode_turn_off">Turn passcode off</string>
    <string name="passcode_turn_on">Turn passcode on</string>
    <string name="title_activity_abstract_passcode_keyboard">AbstractPasscodeKeyboardActivity</string>
    <string name="title_activity_menu_lock_screen">MenuLockScreen</string>

</resources>
