<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:appcompat="http://schemas.android.com/apk/res-auto" >
	<item
        android:id="@+id/action_add"
		android:orderInCategory="1"
        android:icon="@drawable/abs_add"
		android:title="@string/action_add"
        appcompat:showAsAction="always" />
    <item
       android:id="@+id/action_rate"
       android:icon="@drawable/abs_rate_us"
       appcompat:showAsAction="never"
       android:title="@string/action_rate_us"/>
   <item
       android:id="@+id/action_settings"
       android:icon="@drawable/abs_settings"
     		appcompat:showAsAction="never"
       android:title="@string/action_settings"/>
   <!-- <item
       android:id="@+id/action_help"
       android:icon="@drawable/abs_help"
   	   appcompat:showAsAction="never"
       android:title="@string/action_help"/> -->
</menu>
