<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:appcompat="http://schemas.android.com/apk/res-auto" >

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/> -->
     <item
        android:id="@+id/action_paid"
		android:orderInCategory="1"
        android:icon="@drawable/abs_done"
        appcompat:showAsAction="always"
        android:title="@string/action_paid"/>
     <item
        android:id="@+id/action_add_payment"
		android:orderInCategory="1"
        android:icon="@drawable/abs_add_payment"
        appcompat:showAsAction="always"
        android:title="@string/action_add_payment"/>
     <item
        android:id="@+id/action_minus_payment"
		android:orderInCategory="1"
        android:icon="@drawable/abs_down"
        appcompat:showAsAction="always"
        android:title="@string/action_minus_payment"/>
     
     

</menu>
